--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -18,9 +18,16 @@
     %p
       %b Deadline:
       = @competition.deadline_signin.strftime('%e %B %Y')  
-
-  #btn-vote
-    Breng je stem uit!
+- if signed_in?
+  - if current_user == @competition.user || current_user.administrator?          
+    = link_to 'Edit', edit_competition_path(@competition)
+    \|
+  = link_to 'Back', competitions_path
+  - if signed_in?
+    = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
+  - if Time.now.in_time_zone("Amsterdam") >= @competition.deadline_signin && Time.now.in_time_zone("Amsterdam") <= @competition.deadline
+    #btn-vote
+      Breng je stem uit!
 
 #container-art-bg
   #container-art
@@ -39,21 +46,20 @@
       %p Bedankt voor het stemmen, klik hier om te sluiten
   
 #container.js-masonry
-  - @competition.pictures.shuffle.each do |picture|
-    .item
-      = link_to picture do
-        = image_tag(picture.image_url)
-      = link_to picture.title, picture, :class => "art-name"
-      Door:
-      = picture.user.name
-      -# = pluralize(picture.votes.count, "vote" )
-      -# %span
-        -# %div
-          -# %p
-            -# \ #{pluralize(picture.votes.count, "" )}
-- if current_user == @competition.user          
-  = link_to 'Edit', edit_competition_path(@competition)
-  \|
-= link_to 'Back', competitions_path
-- if signed_in?
-  = link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
+  - if Time.now.in_time_zone("Amsterdam") >= @competition.deadline_signin
+    - @competition.pictures.shuffle.each do |picture|
+      .item
+        = link_to picture do
+          = image_tag(picture.image_url)
+        = link_to picture.title, picture, :class => "art-name"
+        Door:
+        = picture.user.name
+        - if signed_in?
+          - if current_user == @competition.user || current_user.administrator? || Time.now.in_time_zone("Amsterdam") <= @competition.deadline
+            #{pluralize(picture.votes.count, "" )}
+            -# = pluralize(picture.votes.count, "vote" )
+            -# %span
+              -# %div
+                -# %p
+                  -# \ #{pluralize(picture.votes.count, "" )}
+
