--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,7 +24,7 @@ div, a
 // Variables
 $black:         #000000
 $white:         #FFFFFF
-$beige:         #f9f9f9
+$beige:         #FFECEC
 $darkest-grey:  #2d2d2d
 $dark-grey:     #626262
 $light-grey:    #F7F7F7
@@ -211,9 +211,17 @@ body,html
       width: 80%
       float: left
     img
+      width: 100%
+      padding: 10px 0
+    .logo
+      padding: 0px 
       width: 20%
       float: left
+    span
+      font-style: italic
+      float: left
     a
+      margin-top: 15px
       padding: 10px 15px
       color: $white
       border-radius: 30px
