--- a/app/views/competitions/index.html.haml
+++ b/app/views/competitions/index.html.haml
@@ -25,7 +25,7 @@
         %td#deadline
           = competition.deadline.strftime('%e %B %Y')
         %td#username
-          = competition.user_name
+          = competition.user.name
         - if signed_in?
           - if current_user == competition.user || current_user.administrator?
             %td#edit
