--- a/app/views/competitions/homepage.html.haml
+++ b/app/views/competitions/homepage.html.haml
@@ -159,8 +159,8 @@
         =image_tag("dali-sunset.png")
         %p
           Einde stemronde: 14-08-2014
-      %a{:href => "/", :class => "more-info"}Ingezonden kunst
-      %a{:href => "/", :class => "participate"}Breng je stem uit
+      %a{:href => "/", :class => "ingezonden-kunst"}Ingezonden kunst
+      %a{:href => "/", :class => "stemmen"}Breng je stem uit
 
     .container-information
       .content
@@ -171,8 +171,8 @@
         =image_tag("dali-sunset.png")
         %p
           Einde stemronde: 14-08-2014
-      %a{:href => "/", :class => "more-info"}Ingezonden kunst
-      %a{:href => "/", :class => "participate"}Breng je stem uit
+      %a{:href => "/", :class => "ingezonden-kunst"}Ingezonden kunst
+      %a{:href => "/", :class => "stemmen"}Breng je stem uit
   // End vote matches
 
   // Start art winner
@@ -193,7 +193,7 @@
         %p
           Einde stemronde: 14-08-2014
       %a{:href => "/", :class => "check-art"}Kunstwerk bekijken
-      %a{:href => "/", :class => "participate"}Portfolio bekijken
+      %a{:href => "/", :class => "check-portfolio"}Portfolio bekijken
 
     .container-overlay-picture
       .close
