--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Sign up') %>
-<h1>Registreren</h1>
+<div id="registreren">
+	<h1>Registreren</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
