--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,20 +1,26 @@
-<div class="row">
-  <div class="span6 offset3">
-    <%= form_for @user do |f| %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+  <div class="row">
+    <div class="span6 offset3">
+      <%= form_for @user do |f| %>
 
-      <%= f.label :email %>
-      <%= f.text_field :email %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        </br>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+        </br>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+        </br>
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
-    <% end %>
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation %>
+        </br>
+
+        <%= f.submit "Registreren!", class: "btn btn-large btn-primary" %>
+      <% end %>
+    </div>
   </div>
-</div>
+
