--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1122,3 +1122,29 @@ div, input, textarea
     color: white
     border-radius: 30px
     text-decoration: none
+
+#container-content #login-form
+  padding-top: 40px
+  width: 515px
+  margin: 0 auto
+  h1 
+    width: 100%
+    text-align: center
+  p
+    margin-bottom: 20px
+  label
+    width: 125px
+    line-height: 59px
+    float: left
+    display: inline-block
+  input
+    padding: 20px
+    width: 350px
+    margin-bottom: 20px
+  .btn-primary
+    float: right
+    background-color: #51a4c7
+    width: 390px
+    color: white
+    border-radius: 30px
+    text-decoration: none
